# hydrus-api

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
src/: async_lib.rs  client.rs  client_async.rs  lib.rs  sync_lib.rs  tests.rs  traits.rs  traits_async.rs  types.rs
src/async_lib/: client.rs  traits.rs  types.rs
src/sync_lib/: client.rs  traits.rs
tests/: async.rs  sync.rs
