[package]
name = "hydrus-api-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { version = "0.1.89", optional = true }
reqwest = { version = "0.12.23", features = [
  "json",
  "stream",
], optional = true }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt", "macros"], optional = true }
tokio-util = { version = "0.7.16", optional = true }
ureq = { version = "3.1.2", features = ["json"], optional = true }
urlencoding = "2.1.3"

[features]
deafult = ["sync"]
async = ["dep:async-trait", "dep:reqwest", "dep:tokio", "dep:tokio-util"]
sync = ["dep:ureq"]
